BookmarkController.php : ajout d'une fonction et d'une route pour afficher les details d'un seul arque page / Création d'une vue show.html.twig pour afficher les details d'un marque page / index.html.twig : Ajout d'un lien dynamique sur l'url des marques pages pour redigérer vers la page des details

--- a/templates/bookmark/index.html.twig
+++ b/templates/bookmark/index.html.twig
@@ -18,7 +18,9 @@
                 <tbody>
                 {% for bookmark in bookmarks %}
                     <tr>
-                        <td>{{ bookmark.url }}</td>
+                        <td>
+                            <a href="{{ path('bookmark_show', { id: bookmark.id }) }}">{{ bookmark.url }}</a>
+                        </td>
                         <td>{{ bookmark.createdAt|date('d/m/Y H:i') }}</td>
                         <td>{{ bookmark.comment ?: 'Aucun commentaire' }}</td>
                     </tr>
