--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -26,6 +26,14 @@
                 <tr>
                     <th>Id</th>  {# Column for book ID #}
                     <th>Title ({{ numberOfBooks }})</th>  {# Column for book titles, displaying the total count #}
+                    <th>
+                        <a href="{{ path('book_new') }}" class="btn bg_mauve text-white d-flex align-items-center justify-content-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                            </svg>
+                        </a>
+                    </th>
                 </tr>
                 </thead>
                 <tbody>
@@ -35,7 +43,14 @@
                         <td>
                             <a class="color_rose" href="{{ path('book_show', { id: book.id }) }}">{{ book.id }}</a>
                         </td>
-                        <td class="color_bleu">{{ book.title }}</td>  {# Displays the book title #}
+                        <td class="color_bleu">{{ book.title }} </td>  {# Displays the book title #}
+                        <td>
+                            <a href="{{ path('book_edit', { id: book.id }) }}" class="btn bg_rose text-white d-flex align-items-center justify-content-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                                    <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+                                </svg>
+                            </a>
+                        </td>
                     </tr>
                 {% else %}
                     {# Displays a message if no books are found #}
