--- a/templates/book/manage.html.twig
+++ b/templates/book/manage.html.twig
@@ -1,15 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créer un nouveau livre{% endblock %}
+{% block title %}{{ book is defined ? 'Modifier' : 'Créer' }} un livre{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="mb-4">Créer un nouveau livre</h1>
+        <h1 class="mb-4">{{ book is defined ? 'Modifier' : 'Créer' }} un livre</h1>
 
         <div class="card shadow-sm">
             <div class="card-body">
                 {{ form_start(form) }}
-
                 <div class="row g-3">
                     {% for field in form %}
                         {% if field.vars.name != '_token' %}
@@ -24,8 +23,12 @@
                     {% endfor %}
                 </div>
 
-                <button type="submit" class="btn btn-primary mt-3">Créer</button>
-
+                <button type="submit" class="btn bg_mauve text-white mt-3">
+                    {{ book is defined ? 'Modifier' : 'Créer' }}
+                </button>
+                <a href="{{ path('book_list') }}" class="btn bg_rose text-white mt-3 ms-2">
+                    Annuler
+                </a>
                 {{ form_end(form) }}
             </div>
         </div>
