Author modification and listing management

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('book_list') }}">Livres</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('author_list') }}">Auteur</a>
+                </li>
                 <li><a class="nav-link" href="{{ path('lecailloux_home') }}">Le Cailloux</a></li>
 
             </ul>
