--- a/templates/bookmark/index.html.twig
+++ b/templates/bookmark/index.html.twig
@@ -8,36 +8,38 @@
 
         <div class="table-responsive mt-4">
 
-            {# Ajout d'un bouton pour créer un nouveau marque-page #}
-            <div class="d-flex justify-content-end mb-3">
-                <a href="{{ path('bookmark_new') }}"
-                   class="btn bg_mauve text-white d-flex align-items-center justify-content-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                         class="bi bi-plus-circle" viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
-                    </svg>
-                    <span class="ms-2">Ajouter</span>
-                </a>
-            </div>
-
             <table class="table table-bordered table-hover shadow-sm">
                 <thead>
                 <tr>
                     <th>Id</th>
                     <th>URL</th>
-                    <th></th> {# colonne pour bouton d'édition #}
+                    <th style="width: 120px;">
+                        <a href="{{ path('bookmark_new') }}"
+                           class="btn bg_mauve text-white d-flex align-items-center justify-content-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                 class="bi bi-plus-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                            </svg>
+                        </a>
+                    </th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for bookmark in bookmarks %}
                     <tr>
-                        <td>
-                            <a class="color_rose"
-                               href="{{ path('bookmark_show', { id: bookmark.id }) }}">{{ bookmark.id }}</a>
-                        </td>
+                        <td>{{ bookmark.id }}</td>
                         <td class="color_bleu">{{ bookmark.url }}</td>
-                        <td>
+                        <td class="d-flex gap-2 justify-content-center">
+                            <a href="{{ path('bookmark_show', { id: bookmark.id }) }}"
+                               class="btn bg_rose text-white d-flex align-items-center justify-content-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-eye" viewBox="0 0 16 16">
+                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"/>
+                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"/>
+                                </svg>
+                            </a>
+
                             <a href="{{ path('bookmark_edit', { id: bookmark.id }) }}"
                                class="btn bg_rose text-white d-flex align-items-center justify-content-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -49,7 +51,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="5" class="text-center text-muted p-3">
+                        <td colspan="3" class="text-center text-muted p-3">
                             Aucun marque-page enregistré.
                         </td>
                     </tr>
