--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="text-center color_mauve">Liste des livres</h1>  {# Page heading with styling #}
+        <h1 class="text-center color_mauve">Liste des livres</h1> {# Page heading with styling #}
 
         <div class="table-responsive mt-4">  {# Makes the table responsive for different screen sizes #}
 
@@ -12,10 +12,11 @@
             <form action="{{ path('book_findByFirstLetter', {'firstLetter': ''}) }}" method="GET" class="mb-3">
                 <label for="filter">Filtrer par la première lettre :</label>
                 <select id="filterLetter" class="form-select w-auto">
-                    <option value="allBook">Tout</option>  {# Option to show all books #}
+                    <option value="allBook">Tout</option> {# Option to show all books #}
                     {% for letter in 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'|split('') %}
                         {# Set the selected option based on the currently selected letter #}
-                        <option value="{{ letter }}" {% if selectedLetter is defined and selectedLetter and selectedLetter == letter %}selected{% endif %}>{{ letter }}</option>
+                        <option value="{{ letter }}"
+                                {% if selectedLetter is defined and selectedLetter and selectedLetter == letter %}selected{% endif %}>{{ letter }}</option>
                     {% endfor %}
                 </select>
             </form>
@@ -24,11 +25,13 @@
             <table class="table table-bordered table-hover shadow-sm">
                 <thead>
                 <tr>
-                    <th>Id</th>  {# Column for book ID #}
-                    <th>Title ({{ numberOfBooks }})</th>  {# Column for book titles, displaying the total count #}
-                    <th>
-                        <a href="{{ path('book_new') }}" class="btn bg_mauve text-white d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                    <th>Id</th> {# Column for book ID #}
+                    <th>Title ({{ numberOfBooks }})</th> {# Column for book titles, displaying the total count #}
+                    <th style="width: 120px;">
+                        <a href="{{ path('book_new') }}"
+                           class="btn bg_mauve text-white d-flex align-items-center justify-content-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                 class="bi bi-plus-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
                             </svg>
@@ -39,21 +42,27 @@
                 <tbody>
                 {% for book in books %}
                     <tr>
-                        {# Clicking on the ID redirects to the book details page #}
-                        <td>
-                            <a class="color_rose" href="{{ path('book_show', { id: book.id }) }}">{{ book.id }}</a>
-                        </td>
-                        <td class="color_bleu">{{ book.title }} </td>  {# Displays the book title #}
-                        <td>
-                            <a href="{{ path('book_edit', { id: book.id }) }}" class="btn bg_rose text-white d-flex align-items-center justify-content-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                        <td>{{ book.id }}</td>
+                        <td class="color_bleu">{{ book.title }}</td>
+                        <td class="d-flex gap-2 justify-content-center">
+                            <a href="{{ path('book_show', { id: book.id }) }}"
+                               class="btn bg_rose text-white d-flex align-items-center justify-content-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"/>
+                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"/>
+                                </svg>
+                            </a>
+
+                            <a href="{{ path('book_edit', { id: book.id }) }}"
+                               class="btn bg_rose text-white d-flex align-items-center justify-content-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-pencil" viewBox="0 0 16 16">
                                     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
                                 </svg>
                             </a>
                         </td>
                     </tr>
                 {% else %}
-                    {# Displays a message if no books are found #}
                     <tr>
                         <td colspan="4" class="text-center text-muted p-3">
                             No books recorded.
