--- a/templates/employee/index.html.twig
+++ b/templates/employee/index.html.twig
@@ -7,13 +7,12 @@
         <h1 class="text-center color_mauve">Liste des employés</h1>
 
         <div class="table-responsive mt-4">
-
             <table class="table table-bordered table-hover shadow-sm">
                 <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Nom ({{ numberOfEmployees }})</th>
-                    <th>
+                    <th>Nom</th>
+                    <th style="width: 120px;">
                         <a href="{{ path('employee_new') }}"
                            class="btn bg_mauve text-white d-flex align-items-center justify-content-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -28,14 +27,22 @@
                 <tbody>
                 {% for employee in employees %}
                     <tr>
-                        <td>
-                            <a class="color_rose"
-                               href="{{ path('employee_show', { id: employee.id }) }}">{{ employee.id }}</a>
-                        </td>
+                        <td>{{ employee.id }}</td>
                         <td class="color_bleu">{{ employee.surname }} {{ employee.firstname }}</td>
-                        <td>
+                        <td class="d-flex gap-2 justify-content-center">
+                            <a href="{{ path('employee_show', { id: employee.id }) }}"
+                               class="btn bg_rose text-white d-flex align-items-center justify-content-center"
+                               title="Détails">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-eye" viewBox="0 0 16 16">
+                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"/>
+                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"/>
+                                </svg>
+                            </a>
+
                             <a href="{{ path('employee_edit', { id: employee.id }) }}"
-                               class="btn bg_rose text-white d-flex align-items-center justify-content-center">
+                               class="btn bg_rose text-white d-flex align-items-center justify-content-center"
+                               title="Éditer">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                      class="bi bi-pencil" viewBox="0 0 16 16">
                                     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
