--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -4,34 +4,28 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="text-center color_mauve">Details du livre {{ book.id }}</h1>
+        <h1 class="text-center color_mauve">{{ 'book.show.title'|trans }} {{ book.id }}</h1>
         <div class="table-responsive mt-4">
             <table class="table table-bordered table-hover shadow-sm">
-                <thead>
-                <tr>
-                    <th>Libellé</th>
-                    <th>Valeur</th>
-                </tr>
-                </thead>
                 <tbody>
                 <tr>
                     <th class="color_rose">id</th>
                     <td class="color_bleu">{{ book.id }}</td>
                 </tr>
                 <tr>
-                    <th class="color_rose">Titre</th>
+                    <th class="color_rose">{{ 'book.show.table.title'|trans }}</th>
                     <td class="color_bleu">{{ book.title }}</td>
                 </tr>
                 <tr>
-                    <th class="color_rose">Date de publication</th>
+                    <th class="color_rose">{{ 'book.show.table.publication_date'|trans }}</th>
                     <td class="color_bleu">{{ book.publicationdate|date('d/m/Y') }}</td>
                 </tr>
                 <tr>
-                    <th class="color_rose">Maison d'édition</th>
+                    <th class="color_rose">{{ 'book.show.table.publishing_house'|trans }}</th>
                     <td class="color_bleu">{{ book.publishinghouse }}</td>
                 </tr>
                 <tr>
-                    <th class="color_rose">Auteur</th>
+                    <th class="color_rose">{{ 'book.show.table.author'|trans }}</th>
                     <td class="color_bleu">{{ book.auteur.surname }} {{ book.auteur.firstname }}</td>
                 </tr>
 
@@ -39,7 +33,7 @@
             </table>
 
             <div class="mt-3">
-                <a href="{{ path('book_list') }}" class="btn btn-secondary">Retour à la liste</a>
+                <a href="{{ path('book_list') }}" class="btn btn-secondary">{{ 'book.show.button_back'|trans }}</a>
             </div>
         </div>
     </div>
