--- a/templates/bookmark/index.html.twig
+++ b/templates/bookmark/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1 class="text-center color_mauve">Liste des Marque-Pages</h1>
+        <h1 class="text-center color_mauve">{{ 'bookmark.index.title'|trans }}</h1>
 
         <div class="table-responsive mt-4">
 
