--- a/templates/le_cailloux/flore.html.twig
+++ b/templates/le_cailloux/flore.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Flore du Cailloux{% endblock %}
 
 {% block content %}
-    <h2 class="text-center text-white">Découvrez la Flore du Cailloux</h2>
-    <p class="text-center text-white">Les espèces uniques qui peuplent notre île.</p>
+    <h2 class="text-center text-white">{{ 'lecailloux.flora.title'|trans }}</h2>
+    <p class="text-center text-white">{{ 'lecailloux.fauna.subtitle'|trans }}</p>
 
     <div class="row">
         {% for item in items %}
